# MPointers-2.0

./: CMakeLists.txt
examples/: CMakeLists.txt  linked_list.cpp
memory-manager/: CMakeLists.txt
memory-manager/include/: garbage_collector.h  http_server.h  memory_manager.h
memory-manager/src/: garbage_collector.cpp  http_server.cpp  main.cpp  memory_manager.cpp
mpointers-lib/: CMakeLists.txt
mpointers-lib/include/: http_client.h  mpointer.h
mpointers-lib/src/: http_client.cpp
